--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,11 @@ body {
   background: #f5f5f5;
   color: #c3c3c3;
 }
+
+.mapboxgl-ctrl-logo{
+  display: none !important;
+}
+
+.mapboxgl-ctrl-bottom-right {
+  display: none !important;
+}
