--- a/src/App.css
+++ b/src/App.css
@@ -45,9 +45,10 @@ body {
 
 .map-container {
   position: absolute;
-  top: 0;
+  top: 50px;
   bottom: 0;
   width: 100%;
+  height: 100%;
 }
 
 .overlay {
